Updates and adding a footer

--- a/Brown.html
+++ b/Brown.html
@@ -3,9 +3,9 @@
 
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-	<title>Science World 30th Anniversary</title>
-	<meta name="author" content="" />
-	<meta name="description" content="" />
+	<title>Science World 30th Anniversary | Peter M. Brown</title>
+	<meta name="author" content="Science World" />
+	<meta name="description" content="Financier Peter M. Brown comes from a long line of city builders who have helped shape Vancouver’s most enduring institutions—including Science World" />
 	<meta name="keywords"  content="" />
 	<meta name="Resource-type" content="Document" />
 	<meta name="viewport" content="width=device-width, initial-scale=1">
@@ -63,14 +63,17 @@
 		<div class="interview_wrapper">
 			<div class="history_title">
 <h1>Peter M. Brown</h1></br>
+<h2>Civic Duty Takes Centre Stage</h2></br>
 <p>The mantle of civic duty is one that’s been handed down from generation to generation in the Brown family. Brenton Brown Sr, an executive with Crown Life Insurance, helped found the Non-Partisan Association (for decades, Vancouver’s dominant municipal party) in 1937 and served as president of the Vancouver Board of Trade. His son, Ralph, ran the British Empire Games in 1954 and helped launch the Vancouver Aquarium in 1956, recruiting Ralph Shaw, then president of MacMillan Bloedel, to serve as the aquarium’s first president.
 </p></br>
 <p>Today, Peter M. Brown is following in his father’s and grandfather’s illustrious footsteps. (“We’ve always had a long history of ‘doing our bit,’” he says.) After building a brokerage business over five decades into what would become Canaccord Genuity, the largest independent investment dealer in Canada, Brown is now investing in the next generation of leaders through the Peter & Joanne Brown Foundation, which supports not-for-profit projects and charitable causes that “strengthen community and contribute to the health and vitality of Vancouver and British Columbia” with a particular focus on youth and education.
 </p></br>
+<h2>Peter and Joanne Brown Family Centre Stage</h2></br>
 <p>The Browns have been generous supporters of Science World for 13 years, with the Centre Stage at TELUS World of Science named in their honour since July 2006. Millions of visitors have been able to enjoy daily interactive shows on the Peter Brown Family Centre Stage, which sits at the heart of Science World.
 </p></br>
 <p>For Brown, the impact of the institution can be seen in the eyes of children passing through its doors. That includes his own grandkids. “When they were young, we’d take them to Science World, and all sorts of lights would turn on in their heads. ‘Oh, look at this, look at this, look at this!’” He sees Science World playing a vital role in what he calls “jumpstarting the interest. Jumpstarting a level of curiosity that can change their life, change the way they look at things.” The advocacy for children’s education is elementary, he argues. “Where are we going without them?”
 </p></br>
+<h2>More than a Tourist Attraction</h2></br>
 <p>Beyond the excitement generated within its walls, Science World has also played a central role in the life of the city over the past 30 years, says Brown. “People come here [Vancouver] quite often to go skiing or do other outdoor activities. What we need are things that keep them here for a few days, in the heart of the city. And there’s no question Science World is one of them.”
 </p></br>
 <p>As Chairman of the Finance Committee for the Expo 86 Corporation, Brown was a pivotal influence in the formative years of Science World. But the longtime financier is the first to admit that he wasn’t initially convinced that the Expo Centre, the bedrock of today’s Science World, should survive beyond the World’s Fair.
@@ -86,6 +89,10 @@
 				<a href="index.html#interviews">Back</a>
 			</div>
 		</div>
+</div>
+<div class="bottom">&nbsp;&nbsp;&nbsp;</br>
+	Ignite Your Wonder at: <a href="https://www.scienceworld.ca">scienceworld.ca</a></br></br>
+	<a href="https://www.facebook.com/scienceworldca/"><img src="images/fb_icon.png" width="50px"/></a>&nbsp;&nbsp;&nbsp;<a href="https://twitter.com/scienceworldca"><img src="images/twitter_icon.png" width="50px"/></a>&nbsp;&nbsp;&nbsp;<a href="https://www.instagram.com/scienceworldca"><img src="images/insta_icon.png" width="50px"/></a>
 </div>
 </body>
 </html>
