--- a/Haig.html
+++ b/Haig.html
@@ -3,9 +3,9 @@
 
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-	<title>Science World 30th Anniversary</title>
-	<meta name="author" content="" />
-	<meta name="description" content="" />
+	<title>Science World 30th Anniversary | Haig Farris</title>
+	<meta name="author" content="Science World" />
+	<meta name="description" content="Venture capitalist Haig Farris, who was pivotal in securing funding for Science World 30 years ago, is seeing his decades-long efforts paying off in Vancouver’s thriving tech community" />
 	<meta name="keywords"  content="" />
 	<meta name="Resource-type" content="Document" />
 	<meta name="viewport" content="width=device-width, initial-scale=1">
@@ -66,19 +66,21 @@
 		<div class="interview_wrapper">
 			<div class="history_title">
 <h1>Haig Farris</h1></br>
+				<h2>Tech Titan Creates a Thriving Future</h2></br>
 				<p>Haig Farris first got involved with Science World in the early 1980s, years before its rebranding from the Arts, Sciences and Technology Centre, or ASTC, and subsequent move into the Expo Centre. He was already a known commodity in the Vancouver tech community at the time, having cofounded Ventures West Capital Ltd with Mike Brown and Jim Fletcher in 1973. Ventures West was one of the first major tech venture capital firms in BC, and was responsible for pioneering investments in iconic BC companies such as Ballard Power Systems, MDI Mobile Data International Inc, and Macdonald, Dettwiler and Associates Ltd (MDA).</p>
 				</br>
-
+<h2>Science World’s Origins</h2></br>
 				<p>Farris, who sat on the MDA board, was asked by that company’s CEO, John Pitts, to consider supporting ASTC. “He said, ‘It’s time the next generation got involved, so you’re going on the board!’” recalls Farris. “I knew a little bit of the background, because my stepfather, who had been vice-president of UBC, was one of the originals who got Arts, Sciences and Technology up and running.”</p></br>
 
 <p>At the time, says Farris, ASTC was “a really struggling operation. Carol Tulk was running it day-to-day and doing a good job with no money. We never knew whether the next paycheque was going to come.” He worked to drum up investments from friends in finance, tech and science, including Rudy North (investment manager and eco-philanthropist) and Erich Vogt (then director of TRIUMF particle accelerator centre), but this was only a short-term fix. “We were starting to look around to see where we would go in terms of a permanent home.”</p></br>
 
+<h2>What is a Science Centre, Anyway?</h2></br>
 <p>Working with Barbara Brink, who would go on to become CEO of Science World, the board helped secure the Expo Centre once Expo 86 came to an end, then got to work sourcing funding from various levels of government. Lastly came the challenge of getting private donors to contribute to the new Science World. Farris says this task was “hugely difficult because nobody knew what science centres were.” In 1986, he helped organize a dinner to raise awareness of Science World and start building a public profile for it; Cecil Green, founder of Texas Instruments, delivered the keynote speech. </p></br>
 
 <p>“We decided that what we would do was host a dinner where we didn’t charge anybody,” says Farris. “We invited all of the wealthy folks in town to hear what we were about.” At the end of that event, “The movers and shakers at least knew about us. We didn’t get a call from anybody the next day saying, ‘I’ll fund you,’ but they started to spread the word.” </p></br>
 
 <p>Soon, leading members of the business community, including Robert Dickinson, cofounder of mining giant Hunter Dickinson Inc, and Brian Canfield, the soon-to-be CEO of BC Tel (now TELUS), joined Science World’s fundraising committee. A year later, after a successful capital campaign, Farris left the board and returned to full-time work at Ventures West. “My partners were starting to get a little antsy because I was spending so much time away from our business,” he explains. “And, you know, I'm a builder of new things.”</p></br>
-
+<h2>A Lifetime of Building Great Things</h2></br>
 <p>Over the next 30 years, as director and co-founder, Farris built four new UBC spinoff companies: D-Wave Systems (quantum computing), Zymeworks (biotherapeutics), Creatus (plant genetics) and Tech-X (mineral exploration). An Officer of the Order of Canada since 2016, he still kicks the tires of dozens of tech startups each year. Even at the age of 80, retirement does not appear to feature in his immediate plans. “I can’t even come close to looking at all the things I’d like to invest in,” he says.</p></br>
 
 <p>Looking back, the impact Science World has had on Vancouver’s tech sector has been immeasurable, he says. “I can't tell you the number of people I’ve met over the years who’ve said, ‘Oh I got so inspired at Science World,’ or ‘those wonderful demonstrations they have at the Centre Stage,’ or ‘all the exhibits that have come through’ or ‘some of the really neat talks.’” He sees Science World continuing to play a critical role, especially as society is upended by technological innovations, from machine learning to gene editing.</p></br>
@@ -91,6 +93,10 @@
 				<a href="index.html#interviews">Back</a>
 			</div>
 		</div>
+</div>
+<div class="bottom">&nbsp;&nbsp;&nbsp;</br>
+	Ignite Your Wonder at: <a href="https://www.scienceworld.ca">scienceworld.ca</a></br></br>
+	<a href="https://www.facebook.com/scienceworldca/"><img src="images/fb_icon.png" width="50px"/></a>&nbsp;&nbsp;&nbsp;<a href="https://twitter.com/scienceworldca"><img src="images/twitter_icon.png" width="50px"/></a>&nbsp;&nbsp;&nbsp;<a href="https://www.instagram.com/scienceworldca"><img src="images/insta_icon.png" width="50px"/></a>
 </div>
 </body>
 </html>
