--- a/Jim.html
+++ b/Jim.html
@@ -3,9 +3,9 @@
 
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-	<title>Science World 30th Anniversary</title>
+	<title>Science World 30th Anniversary | Jim Pattison</title>
 	<meta name="author" content="" />
-	<meta name="description" content="" />
+	<meta name="description" content="B.C. business legend Jim Pattison, who helped deliver Expo 86 and change the province forever, sees a bright future for one of Expo’s greatest legacies: Science World" />
 	<meta name="keywords"  content="" />
 	<meta name="Resource-type" content="Document" />
 	<meta name="viewport" content="width=device-width, initial-scale=1">
@@ -66,20 +66,27 @@
 		<div class="interview_wrapper">
 			<div class="history_title">
 <h1>Jim Pattison</h1></br>
+<h2>Chairman of the Board</h2></br>
 <p>When Premier Bill Bennett approached Jim Pattison in the fall of 1980 to chair what was then known as Transpo 86, the mandate was a simple one: accumulate the waterfront land for what would become a transportation-oriented fair in 1986 to celebrate Vancouver’s centennial. “Because I was involved in cars — I’m a car dealer now and I was a car dealer then — I think they thought I would be interested in transportation,” says Pattison. “Which I was.”
 </p></br>
 <p>But the mandate quickly shifted, and Pattison — already one of B.C.’s top business leaders, with interests in the broadcasting, retail, automotive sectors, to name but three — found his responsibilities growing. In 1981, Transpo became Expo 86 — and, as a world fair, assumed global significance. Pattison went from buying up all the sawmills and railway land surrounding False Creek to hiring all the personnel required to put on a five-month international exhibition.
 </p></br>
+
+<h2>Making Expo 86 a Reality</h2></br>
 <p>In 1983, Bennett returned to Pattison with a big ask: Would the chairman stay around until the fair’s end? Pattison said yes — though he probably didn’t realize at the time what he was signing up for. “In 1980, when I took on the job, the premier said it would be Friday afternoon, once a week,” he recalls. “Eventually I just moved my office onto the Expo site and stayed there seven days a week, except for when we were traveling around the world trying to get countries and corporations to come.”
 </p></br>
 <p>He stayed until the very end. “We threw a big party at BC Place, where I was also the chairman, for all the staff on the last night of the fair. And I stayed until midnight. I walked up to the top row of BC Place by myself and watched all the goings-on until I was satisfied there was going to be no trouble and went home.”
 </p></br>
 <p>While Pattison has moved on from Expo — building his company, Jim Pattison Group, into a formidable global conglomerate and Canada’s second-largest private company, with over $10 billion in annual sales — both it and one of its enduring legacies have remained close to his heart. Science World, he says, was “absolutely the right thing to do” with the former Expo Centre. “For the city and the province.”
 </p></br>
+
+<h2>Inspiring Generations</h2></br>
 <p>“I think our future is the young people,” says Pattison, whose current holdings include the Ripley Entertainment division, with its museums, aquariums, and traveling shows, all popular with kids and adults alike. “You try to do something that’s positive for the young people, the community, and tourists.” Reflecting on both Ripley’s and Science World, he says the key is to spark a passion in kids for the world around them. “What you’re talking about is broadening the vision of young people — or anybody who comes in here — because of what you do.”
 </p></br>
 <p>Pattison is the first to admit that when he was growing up in East Vancouver, science was not his strength. “I was more interested in selling stuff. In Grade 3, after school, I went door to door selling garden seeds, flower seeds,” he recalls. “And then after that, I got a job selling subscriptions to the Saturday Evening Post, the Ladies’ Home Journal. And eventually I got a bike with a carrier, and I went to work for a Chinese grocer on Main Street.”
 </p></br>
+
+<h2>Learning How the World Works</h2></br>
 <p>Every summer, his parents would send their young son back to his birthplace on the family homestead in Luseland, Saskatchewan. “They thought that unless you knew how to feed the chickens and the pigs, and bring in the cows and milk them, you didn’t know anything.” They wanted to make sure he understood “the real world, which was the farm.”
 </p></br>
 <p>The experience was a seminal one, and he thinks that institutions like Science World can play a similar role in helping ensure that future generations of kids understand how the world around them works — especially when so much of it consists of things we take for granted.
@@ -93,6 +100,10 @@
 				<a href="index.html#interviews">Back</a>
 			</div>
 		</div>
+</div>
+<div class="bottom">&nbsp;&nbsp;&nbsp;</br>
+	Ignite Your Wonder at: <a href="https://www.scienceworld.ca">scienceworld.ca</a></br></br>
+	<a href="https://www.facebook.com/scienceworldca/"><img src="images/fb_icon.png" width="50px"/></a>&nbsp;&nbsp;&nbsp;<a href="https://twitter.com/scienceworldca"><img src="images/twitter_icon.png" width="50px"/></a>&nbsp;&nbsp;&nbsp;<a href="https://www.instagram.com/scienceworldca"><img src="images/insta_icon.png" width="50px"/></a>
 </div>
 </body>
 </html>
