--- a/Lees.html
+++ b/Lees.html
@@ -3,9 +3,9 @@
 
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-	<title>Science World 30th Anniversary</title>
-	<meta name="author" content="" />
-	<meta name="description" content="" />
+	<title>Science World 30th Anniversary | Bob and Lily Lee</title>
+	<meta name="author" content="Science World" />
+	<meta name="description" content="Bob and Lily Lee, two of BC’s philanthropists, believe that creating prosperity starts with making a commitment to education and youth" />
 	<meta name="keywords"  content="" />
 	<meta name="Resource-type" content="Document" />
 	<meta name="viewport" content="width=device-width, initial-scale=1">
@@ -66,6 +66,7 @@
 		<div class="interview_wrapper">
 			<div class="history_title">
 <h1>Bob and Lily Lee</h1></br>
+<h2>Community Builders</h2></br>
 				<p>For the Lee family, the practice of giving back is one that spans generations. Robert (Bob) Lee, Founder and Chairperson of Prospero International Realty Inc. and Co-Founder of Wall Financial Corporation, remembers his father quietly sending cheques to his small family village in Southern China—a tradition among those who’d ventured to the Promised Land.
 </p></br>
 
@@ -73,12 +74,16 @@
 </br>
 <p>Lily Lee, a retired community health nurse who grew up in Alert Bay, a village on island off the coast of British Columbia, tells a similar story about her father, who worked as a houseboy and as a labourer in the logging camps of Vancouver Island and would send part of his modest earnings to relatives in China. </p>
 </br>
+
+<h2>Giving with Purpose</h2></br>
 <p>Today, Bob and Lily Lee are the ones giving back, helping to support a variety of causes, from UBC to the YMCA and, since 2001, Science World. The Lees have supported critical renovations at Science World, while their daughter Leslie and her husband, John Murphy, have been key players in its more recent developments. Murphy was a member of the Science World Board of Directors from 2000 to 2008, and he has been on the Science World Advisory Council since 2013. </p>
 </br>
 <p>For Bob Lee, the common denominator for almost all the family’s philanthropy is a commitment to supporting education and youth, which dovetails seamlessly with Science World’s own Mission to ignite wonder and empower dreams. “Science and technology are the future of Canada,” he says. “They are going to improve our standard of living and prove Canada is a world leader.” Adds Lily Lee, “Science World stimulates young people’s interest in science, which I think is really critical to the world.” The Lees have taken their own grandchildren to Science World over the years, and Bob describes a transformative impact of those visits: “They brighten up when they come here. It’s like magic.”</p>
 </br>
 <p>Philanthropically, the Lees have made a name for themselves through their support for the province’s largest university, which all four of Bob and Lily’s children attended and from which Bob graduated with a commerce degree in 1956. In 1987, Bob Lee founded the UBC Properties Trust as a way of creating a revenue stream for UBC through the development of market housing. Over the past three decades, the Trust has raised $1.6 billion for UBC, with a potential for $4 billion in total by the time the land is fully developed. “The goal all along,” says Lee,” was simple: to help the younger generation who can’t afford to attend UBC and to hire the best professors.” </p>
 </br>
+
+<h2>The Future is Bright</h2></br>
 <p>Lee, who served as Chancellor of UBC from 1993 to 1996, received the Order of Canada in 1999 and was inducted into the Business Laureates of British Columbia Hall of Fame in 2010. As he looks forward to Science World’s next 30 years, he wants to see the institution continue to expand and grow. For business and philanthropy alike, it’s critical to building Canada’s future—and continuing to make Gold Mountain prosper. </p>
 </br>
 <p>“We need to spend more money on innovation,” he says. “That, to me, will improve our lifestyle, our standard of living. You need all of that technology, and that is why I’m so involved with education.” </p>
@@ -91,6 +96,10 @@
 				<a href="index.html#interviews">Back</a>
 			</div>
 		</div>
+</div>
+<div class="bottom">&nbsp;&nbsp;&nbsp;</br>
+	Ignite Your Wonder at: <a href="https://www.scienceworld.ca">scienceworld.ca</a></br></br>
+	<a href="https://www.facebook.com/scienceworldca/"><img src="images/fb_icon.png" width="50px"/></a>&nbsp;&nbsp;&nbsp;<a href="https://twitter.com/scienceworldca"><img src="images/twitter_icon.png" width="50px"/></a>&nbsp;&nbsp;&nbsp;<a href="https://www.instagram.com/scienceworldca"><img src="images/insta_icon.png" width="50px"/></a>
 </div>
 </body>
 </html>
