--- a/Paige.html
+++ b/Paige.html
@@ -3,9 +3,9 @@
 
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-	<title>Science World 30th Anniversary</title>
-	<meta name="author" content="" />
-	<meta name="description" content="" />
+	<title>Science World 30th Anniversary | Paige Zheng</title>
+	<meta name="author" content="Science World" />
+	<meta name="description" content="A resident psychiatrist at St Paul’s Hospital, credits her time as a Science World intern with inspiring her to pursue a career in science" />
 	<meta name="keywords"  content="" />
 	<meta name="Resource-type" content="Document" />
 	<meta name="viewport" content="width=device-width, initial-scale=1">
@@ -66,16 +66,23 @@
 		<div class="interview_wrapper">
 			<div class="history_title">
 <h1>Paige Zhang</h1></br>
+<h2>Sparking a Lifelong Passion for Science</h2></br>
 <p>As a young girl attending Mitchell Elementary School in Richmond, Paige Zhang considered the annual field trip to Science World as the most anticipated one of the year. “We knew it was going to be a blast,” she says. “You got to hang out with your friends and do science stuff—and especially for the more academically inclined kids, it was a chance to be cool.”
 </p></br>
+
+<h2>Barbara Brink Internship </h2></br>
 <p>By the time she reached the end of Grade 12, in the spring of 2009, the bond with Science World was even stronger: she applied to be, and was accepted as, a Barbara Brink Intern. Named after the founder of Science World, the internship runs from June to August each year and provides real-world science experience to graduating high school students who show both an interest and academic excellence in the sciences.
 </p></br>
 <p>“It was a mix of learning from the community engagement team at Science World and getting to work on our own science engagement projects,” she recalls of the internship. “And it was probably the best summer I’ve ever had.” One of her fondest memories is of developing an exhibit demonstrating how differently shaped leaves or seeds moved in the wind—“a little wind tunnel that kids could work on and design.”
 </p></br>
+
+<h2>Following in Her Mother’s Footsteps</h2></br>
 <p>For Zhang, being interested in the sciences always presented something of a societal challenge: it was “not normal” for a girl to pursue a career in science. But she had a strong role model in her mother, an electrochemist. “I was lucky enough to spend time in her lab when I was growing up and see what grad students do and what real science looks like,” she says. She also saw some of the obstacles her mother faced: “It was not just being a woman, but also a recent immigrant. She had to go above and beyond to meet expectations—applying to multiple post-doc positions, fighting for opportunities, negotiating for adequate payment or salaries.” When Zhang’s mother received her PhD from the University of Alberta, she was one of only two women graduating at a doctoral level in chemistry. This type of gender imbalance is one that Science World, as an institution, is trying to address early with its Girls and STEAM (science, technology, engineering, art and design, and mathematics) initiative.
 </p></br>
 <p>As for Zhang, upon completing her Barbara Brink Internship, she began studies in math and physics at the University of British Columbia (UBC), all the while working part-time at Science World as a science facilitator. She ultimately transferred into microbiology, and today she is a psychiatry resident at UBC and works at an in-patient unit at St Paul’s Hospital.
 </p></br>
+
+<h2>Bringing Science World to a Medical Career</h2></br>
 <p>While Science World and St Paul’s might seem worlds apart, Zhang sees interesting parallels between the two. “I work with a lot of patients or clients who are quite sick and so are tougher to engage with,” she says. “Working at Science World really taught me to be creative in my approaches to working with people.” At Science World, she notes, it was finding creative ways to engage the crying four-year-old or the uninterested teenager; at St Paul’s, it’s talking about artwork or reading a poem to better understand a patient. “Just the other day a client wasn't talking to me,” she says. “We listened to some jazz music for 10 minutes and then we were able to talk.”
 </p></br>
 <p>“There’s always a way you can get in with people,” she continues. “There’s always something that’s creative or unique that you can use to find a connection.” Just as Science World helped to reinforce Zhang’s passion for science 10 years ago, today she’s finding ways to light that fire in others.
@@ -87,6 +94,10 @@
 				<a href="index.html#interviews">Back</a>
 			</div>
 		</div>
+</div>
+<div class="bottom">&nbsp;&nbsp;&nbsp;</br>
+	Ignite Your Wonder at: <a href="https://www.scienceworld.ca">scienceworld.ca</a></br></br>
+	<a href="https://www.facebook.com/scienceworldca/"><img src="images/fb_icon.png" width="50px"/></a>&nbsp;&nbsp;&nbsp;<a href="https://twitter.com/scienceworldca"><img src="images/twitter_icon.png" width="50px"/></a>&nbsp;&nbsp;&nbsp;<a href="https://www.instagram.com/scienceworldca"><img src="images/insta_icon.png" width="50px"/></a>
 </div>
 </body>
 </html>
