--- a/Rob.html
+++ b/Rob.html
@@ -3,9 +3,9 @@
 
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-	<title>Science World 30th Anniversary</title>
-	<meta name="author" content="" />
-	<meta name="description" content="" />
+	<title>Science World 30th Anniversary | Rob Lunde</title>
+	<meta name="author" content="Science World" />
+	<meta name="description" content="Whether curating Science World’s biggest exhibits or hosting the biggest celebrities, Rob Lunde is consistently focused on making science stick in the minds of his audience through emotional connections" />
 	<meta name="keywords"  content="" />
 	<meta name="Resource-type" content="Document" />
 	<meta name="viewport" content="width=device-width, initial-scale=1">
@@ -66,15 +66,19 @@
 		<div class="interview_wrapper">
 			<div class="history_title">
 <h1>Rob Lunde</h1></br>
+<h2>One of Science World’s Longest-serving Staff Members Loves to Put on a Good Show</h2></br>
 				<p>Rob Lunde has been with Science World since opening day, and in those 30 years he’s welcomed everyone from British royalty to Soviet presidents to half-Vulcan scientists. But his history with the organization dates back even further to 1986, when he was hired by the Arts, Sciences and Technology Centre (ASTC). </p>
 				</br>
 
+<h2>A Passion for Education</h2></br>
 				<p>Freshly equipped with a Bachelor of Science degree from Simon Fraser University (SFU), Lunde originally thought he’d pursue a master’s degree that would allow him to focus on his passion: the behaviour of bats. But the economy was in recession, and the sort of jobs he might have landed with that advanced degree were in short supply. He also wasn’t sure he wanted to be an academic. “I saw an ad in the paper that said, ‘Do you want to teach? We’re looking for people who can teach computers to kids,’” he says. Lunde applied and soon found himself working at a mobile microcomputer lab with ASTC. “We went around the province and introduced computers to students during the day, and then to teachers, parents, principals and administrators in the evening,” he says.</p></br>
 
 <p>By 1988, ASTC was in the process of getting a new home, and Lunde was eager to move into a new role. “When I wasn’t teaching, writing code or writing lessons for our microcomputer lab, I would go around and see all these exhibits, and I really liked them,” he says. He suggested to the head of the education department that he’d like to work on the exhibits. In April of that year, he got his wish. </p></br>
 
+<h2>Ew, Gross</h2></br>
 <p>Over the past three decades, he has helped curate some of Science World’s biggest and most memorable exhibits. One of his favourites was Grossology: The (Impolite) Science of the Human Body, which was based on a best-selling book by Sylvia Branzei and opened in February 2000. “It was all about poo, pee, farts,” Lunde explains with a chuckle. “I became the head content person, the head writer. It’s wonderful to be associated with something so successful that was just talking to kids instead of saying, ‘This is what the adults, the teachers, think you need to know.’” </p></br>
 
+<h2>The Most Important Moments</h2></br>
 <p>While Lunde has stories about some of the famous adults he’s walked through the dome and how he entertained (and was entertained by) them: demonstrating an exhibit to Prince Philip, Duke of Edinburgh; blowing bubbles with Mikhail Gorbachev; watching Leonard Nimoy struggle with a reaction timer; his most cherished memories are of the kids who’ve made Science World what it is today. He maintains that his most important job is providing real content that stokes curiosity, referencing a 1995 exhibition he curated on his favourite nocturnal animal to prove his point. </p></br>
 
 <p>“We had four big brown bats and did two shows: the Fly By Night game show and Going Batty,” he recalls. “I would start by asking, ‘What do you like about bats?’ And no one would put up their hands.” When prodded, the kids in the audience would admit that they thought bats were “gross, they were filthy, they were disease-ridden, they were ugly.”
@@ -92,6 +96,10 @@
 				<a href="index.html#interviews">Back</a>
 			</div>
 		</div>
+</div>
+<div class="bottom">&nbsp;&nbsp;&nbsp;</br>
+	Ignite Your Wonder at: <a href="https://www.scienceworld.ca">scienceworld.ca</a></br></br>
+	<a href="https://www.facebook.com/scienceworldca/"><img src="images/fb_icon.png" width="50px"/></a>&nbsp;&nbsp;&nbsp;<a href="https://twitter.com/scienceworldca"><img src="images/twitter_icon.png" width="50px"/></a>&nbsp;&nbsp;&nbsp;<a href="https://www.instagram.com/scienceworldca"><img src="images/insta_icon.png" width="50px"/></a>
 </div>
 </body>
 </html>
