--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 			<span></span>
 			<span></span>
 		<ul id="menu_burger">
-			<li><a href="#home" class="button">home</a></li>
+			<li><a href="#home" class="button">Science World's 30th</a></li>
 			<li><a href="#stories" class="button">stories</a></li>
 			<li><a href="#initiatives" class="button">initiatives</a></li>
 			<li><a href="#history" class="button">history</a></li>
@@ -96,7 +96,7 @@
 <!-- Desktop Menu -->
 <div class="desktop_menu">
 	<ul id="menu">
-		<li><a href="#home" class="button">home</a></li>
+		<li><a href="#home" class="button">Science World's 30th</a></li>
 		<li><a href="#stories" class="button">stories</a></li>
 		<li><a href="#initiatives" class="button">initiatives</a></li>
 		<li><a href="#history" class="button">history</a></li>
@@ -375,7 +375,10 @@
 					<div class="bg_bottom_4"></div>
 			</div>
   </div>
-
+	<div class="bottom">&nbsp;&nbsp;&nbsp;</br>
+		Ignite Your Wonder at: <a href="https://www.scienceworld.ca">scienceworld.ca</a></br></br>
+		<a href="https://www.facebook.com/scienceworldca/"><img src="images/fb_icon.png" width="50px"/></a>&nbsp;&nbsp;&nbsp;<a href="https://twitter.com/scienceworldca"><img src="images/twitter_icon.png" width="50px"/></a>&nbsp;&nbsp;&nbsp;<a href="https://www.instagram.com/scienceworldca"><img src="images/insta_icon.png" width="50px"/></a>
+	</div>
 
 <script src="js/bootstrap.js"></script>
 <script src="js/touchSwipe.js"></script>
