--- a/Barbara.html
+++ b/Barbara.html
@@ -3,9 +3,9 @@
 
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-	<title>Science World 30th Anniversary</title>
-	<meta name="author" content="" />
-	<meta name="description" content="" />
+	<title>Science World 30th Anniversary | Barbara Brink</title>
+	<meta name="author" content="Science World" />
+	<meta name="description" content="For Barbara Brink, founding CEO and Chair of Science World, the organization has always been about much more than putting on exhibits." />
 	<meta name="keywords"  content="" />
 	<meta name="Resource-type" content="Document" />
 	<meta name="viewport" content="width=device-width, initial-scale=1">
@@ -60,9 +60,7 @@
 	<!-- Menus -->
 
 <div class="interveiw_subpages">
-	<div class="interview_banner_barbara interview_image">
-
-	</div>
+	<div class="interview_banner_barbara interview_image"></div>
 		<div class="interview_wrapper">
 			<div class="history_title">
 <h1>Barbara Brink</h1></br>
@@ -103,6 +101,10 @@
 				<a href="index.html#interviews">Back</a>
 			</div>
 		</div>
+</div>
+<div class="bottom">&nbsp;&nbsp;&nbsp;</br>
+	Ignite Your Wonder at: <a href="https://www.scienceworld.ca">scienceworld.ca</a></br></br>
+	<a href="https://www.facebook.com/scienceworldca/"><img src="images/fb_icon.png" width="50px"/></a>&nbsp;&nbsp;&nbsp;<a href="https://twitter.com/scienceworldca"><img src="images/twitter_icon.png" width="50px"/></a>&nbsp;&nbsp;&nbsp;<a href="https://www.instagram.com/scienceworldca"><img src="images/insta_icon.png" width="50px"/></a>
 </div>
 </body>
 </html>
