--- a/Cybele.html
+++ b/Cybele.html
@@ -3,10 +3,9 @@
 
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-	<title>Science World 30th Anniversary</title>
-	<meta name="author" content="" />
-	<meta name="description" content="" />
-	<meta name="keywords"  content="" />
+	<title>Science World 30th Anniversary | Cybele Negris</title>
+	<meta name="author" content="Science World" />
+	<meta name="description" content="Cybele Negris, a member of Science World’s Chair’s Council, is helping to ignite a passion for science in young girls" />
 	<meta name="Resource-type" content="Document" />
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<!-- CSS -->
@@ -91,6 +90,10 @@
 				<a href="index.html#interviews">Back</a>
 			</div>
 		</div>
+</div>
+<div class="bottom">&nbsp;&nbsp;&nbsp;</br>
+	Ignite Your Wonder at: <a href="https://www.scienceworld.ca">scienceworld.ca</a></br></br>
+	<a href="https://www.facebook.com/scienceworldca/"><img src="images/fb_icon.png" width="50px"/></a>&nbsp;&nbsp;&nbsp;<a href="https://twitter.com/scienceworldca"><img src="images/twitter_icon.png" width="50px"/></a>&nbsp;&nbsp;&nbsp;<a href="https://www.instagram.com/scienceworldca"><img src="images/insta_icon.png" width="50px"/></a>
 </div>
 </body>
 </html>
