--- a/Launi.html
+++ b/Launi.html
@@ -3,9 +3,9 @@
 
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-	<title>Science World 30th Anniversary</title>
+	<title>Science World 30th Anniversary | Launi Skinner</title>
 	<meta name="author" content="" />
-	<meta name="description" content="" />
+	<meta name="description" content="CEO of First West Credit Union and chair of the Science World Board, believes that Science World can connect with the leaders of tomorrow in several ways" />
 	<meta name="keywords"  content="" />
 	<meta name="Resource-type" content="Document" />
 	<meta name="viewport" content="width=device-width, initial-scale=1">
@@ -66,15 +66,19 @@
 		<div class="interview_wrapper">
 			<div class="history_title">
 <h1>Launi Skinner</h1></br>
+<h2>Igniting Wonder Beyond Vancouver</h2></br>
 				<p>As a young girl growing up in Summerland, BC, Launi Skinner felt a certain disconnect, both as a girl who wasn’t expected to ascend to a leadership role and as a resident of the Okanagan, many hours from the big city and all the opportunities it offered. “At the time, you didn’t always travel very far, and I really didn’t visit Vancouver on a regular basis,” says Skinner, CEO of First West Credit Union and Chair of the Science World Board. “And there really wasn’t that sort of outreach program where Science World comes into your community.”</p>
 				</br>
 
 				<p>Skinner moved to Vancouver in 1986, the year of Expo, and the beginning of what would become Science World. She quickly noticed the impact that the nascent science centre was already having on her adopted home. As she achieved ever greater successes in her professional life—she was CEO of 1-800-GOT-JUNK?® and then president of Starbucks US—she began giving back to various institutions that supported youth, especially young women. In 2012, two years after being named CEO of First West, BC’s third-largest credit union, she joined the Board of Science World.</p></br>
 
+<h2>Advancing Girls in STEAM</h2></br>
 <p>Her appearance on the Board coincided with efforts to reach more young girls across BC, including a new Girls in STEAM (science, technology, engineering, art and design, and mathematics) event launched in November 2018. For Skinner, who served as Chair of the Vancouver YWCA Women of Distinction Awards and worked with the Minerva Foundation, the event aligned with her priorities as a business leader. “I’ve always been about working with organizations that can empower and help women. What I love about Science World is that they have this neutrality, a safe place, for people to learn.” She points to the Science World Mission statement to “ignite wonder” in young people: “It’s done with an objectivity, and it creates a greater level of comfort and non-bias to push through some of the barriers that women and girls face. I think there’s real value to that.” </p></br>
 
+<h2>Science World Beyond Vancouver</h2></br>
 <p>Along with a focus on young women, Skinner’s term on the Science World Board has also coincided with a push to reach all parts of the province with Science World’s programming. “We’ve put money into the budget, quite a bit actually, to create a team and a capability where we can go out to communities and bring science and learning to these locations,” she says. Science World brings in science teachers from across the province to introduce new ideas and explore ways in which they can teach science-related disciplines more effectively, as Skinner explains. “A lot of the ability for learning, from any age, quite often rests with the school system. If you’re a science teacher in elementary school, or if you teach chemistry in high school, are there things that we can help bring to actually enhance the curriculum?” </p></br>
 
+<h2>Making Science Accessible to All</h2></br>
 <p>Looking forward to Science World’s next 30 years, Skinner is excited about the legacy of the young men and women from all corners of the province who are passing through these doors, or seeing Science World in their community. They will then be able to point to Science World as being “what really encouraged them or inspired them.” She highlights a program that Science World currently runs for Vancouver’s underserved schools. The students in those schools, she says, may not have “a lot of money and they may not have that same influence when they go home. They might come from a single-parent family, trying to make ends meet. If they can come here and just feel great and get curious and be able to explore what they wouldn’t otherwise be able to—then go on and have that be a catalyst for keeping them on that path—isn’t it great that we can do that?” </p></br>
 
 
@@ -84,6 +88,10 @@
 				<a href="index.html#interviews">Back</a>
 			</div>
 		</div>
+</div>
+<div class="bottom">&nbsp;&nbsp;&nbsp;</br>
+	Ignite Your Wonder at: <a href="https://www.scienceworld.ca">scienceworld.ca</a></br></br>
+	<a href="https://www.facebook.com/scienceworldca/"><img src="images/fb_icon.png" width="50px"/></a>&nbsp;&nbsp;&nbsp;<a href="https://twitter.com/scienceworldca"><img src="images/twitter_icon.png" width="50px"/></a>&nbsp;&nbsp;&nbsp;<a href="https://www.instagram.com/scienceworldca"><img src="images/insta_icon.png" width="50px"/></a>
 </div>
 </body>
 </html>
