--- a/history.html
+++ b/history.html
@@ -201,5 +201,9 @@
 
 
 </div>
+<div class="bottom">&nbsp;&nbsp;&nbsp;</br>
+	Ignite Your Wonder at: <a href="https://www.scienceworld.ca">scienceworld.ca</a></br></br>
+	<a href="https://www.facebook.com/scienceworldca/"><img src="images/fb_icon.png" width="50px"/></a>&nbsp;&nbsp;&nbsp;<a href="https://twitter.com/scienceworldca"><img src="images/twitter_icon.png" width="50px"/></a>&nbsp;&nbsp;&nbsp;<a href="https://www.instagram.com/scienceworldca"><img src="images/insta_icon.png" width="50px"/></a>
+</div>
 </body>
 </html>
