--- a/terms.html
+++ b/terms.html
@@ -91,5 +91,9 @@ For more information and a list of Member benefits, please visit <a href="http:/
 <a href="index.html#share" class="button">Back</a><br/><br/><br/>
 
 </div>
+<div class="bottom">&nbsp;&nbsp;&nbsp;</br>
+	Ignite Your Wonder at: <a href="https://www.scienceworld.ca">scienceworld.ca</a></br></br>
+	<a href="https://www.facebook.com/scienceworldca/"><img src="images/fb_icon.png" width="50px"/></a>&nbsp;&nbsp;&nbsp;<a href="https://twitter.com/scienceworldca"><img src="images/twitter_icon.png" width="50px"/></a>&nbsp;&nbsp;&nbsp;<a href="https://www.instagram.com/scienceworldca"><img src="images/insta_icon.png" width="50px"/></a>
+</div>
 </body>
 </html>
